--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@next/font": "^14.1.3",
     "@reduxjs/toolkit": "^1.9.0",
     "@stripe/stripe-js": "^1.44.1",
     "@types/node": "18.11.9",
